--- a/OrderEat-Merchant/Info.plist
+++ b/OrderEat-Merchant/Info.plist
@@ -34,15 +34,15 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-					<string>Main</string>
+					<string>OrderList</string>
 				</dict>
 			</array>
 		</dict>
 	</dict>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>OrderList</string>
 	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
+	<string>OrderList</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
